--- a/Formation dev fullstack Skill&You/01 Front/03 Maquettage - Bootstrap/Evaluation/CV eng-fr/index.html
+++ b/Formation dev fullstack Skill&You/01 Front/03 Maquettage - Bootstrap/Evaluation/CV eng-fr/index.html
@@ -12,7 +12,7 @@
 <body class="mx-3">
     <header>
         <!-- Barre de navigation responsive -->
-        <nav class="navbar navbar-expand-xl navbar-dark ">
+        <nav class="navbar navbar-expand-xl navbar-dark fixed-top">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="container w-75 m-0">
                     <h1>Pierre Christmann</h1>
@@ -29,6 +29,8 @@
                         <li class="nav-item"><a href="#experiences" class="nav-link active">Expériences</a></li>
                         <li class="nav-item"><a href="#loisirs" class="nav-link active">Loisirs</a></li>
                         <li class="nav-item"><a href="#contact" class="nav-link active">Contact</a></li>
+                        <li class="nav-item"><a href="./index.html" class="nav-link active"><img src="./images/france.png" alt="drapeau français" width="20"></a></li>
+                        <li class="nav-item"><a href="" class="nav-link active"><img src="./images/anglais.png" alt="drapeau anglais" width="20"></a></li>
                     </ul>
                 </div>
             </div>
@@ -65,7 +67,7 @@
             <div class="row">
                 <div class="col-md text-white card border-primary bg-dark mb-3 mx-sm-2">
                     <!-- Partie Expérimenté -->
-                    <span class="competences d-flex justify-content-center fs-4">Expérimenté</span>
+                    <span class="d-flex justify-content-center fs-4">Expérimenté</span>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-5 col-md-4 d-flex">
@@ -121,7 +123,7 @@
                 </div>
                 <!-- Partie Intermédiaire -->
                 <div class="col-md text-white card border-primary bg-dark mb-3 mx-sm-2">
-                    <span class="competences d-flex justify-content-center fs-4">Intermédiaire</span>
+                    <span class="d-flex justify-content-center fs-4">Intermédiaire</span>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-5 col-md-4 d-flex">
@@ -167,7 +169,19 @@
                 </div>
                 <!-- Partie Notions -->
                 <div class="col-md-12 col-xl-4 text-white card border-primary bg-dark mb-3 mx-sm-2">
-                    <span class="competences d-flex justify-content-center fs-4">Notions</span>
+                    <span class="d-flex justify-content-center fs-4">Notions</span>
+                    <div class="d-flex flex-column flex-md-row align-items-center justify-content-md-evenly h-100 my-3">
+                        <ul>
+                            <li>PHP</li>
+                            <li>asp .net</li>
+                            <li>MySQL</li>
+                        </ul>
+                        <ul>
+                            <li>Python</li>
+                            <li>Kotlin</li>
+                            <li>React</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -231,7 +245,7 @@
         </section>
 
         <!-- Section Diplomes -->
-        <section class="container-fluid mb-4" id="diplomes">
+        <section class="container-fluid mb-4 px-3" id="diplomes">
             <div class="row my-4">
                 <h2 class="text-center">Diplômes & formations</h2>
             </div>
@@ -360,7 +374,7 @@
         </section>
 
         <!-- Section Expériences -->
-        <section  class="container-fluid mb-4" id="experiences">
+        <section  class="container-fluid mb-4 px-3" id="experiences">
             <div class="row my-4">
                 <h2 class="text-center my-4">Expériences</h2>
             </div>
@@ -514,32 +528,32 @@
         </section>
 
         <!-- Section Loisirs -->
-        <section class="container-fluid mb-4" id="loisirs">
+        <section class="container-fluid mb-4 px-3" id="loisirs">
             <div class="row my-4">
                 <h2 class="text-center my-4">Loisirs</h2>
             </div>
-            <div class="">
-                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 gx-3">
-                    <div class="col hobby-container px-1">
+            <div class="mb-3">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
+                    <div class="col hobby-container p-1">
                         <img src="./images/rando.jpeg" alt="photo randonnée" class="img-fluid w-100 rounded hobby">
                         <div class="text-description">
                             <h3 class="img-txt text-center">Randonnées en montagne</h3>
                         </div>
                     </div>
-                    <div class="col hobby-container px-1">
-                        <img src="./images/cine.jpg" alt="photo cinéma et séries" class="img-fluid rounded hobby">
+                    <div class="col hobby-container p-1">
+                        <img src="./images/cine.jpg" alt="photo cinéma et séries" class="img-fluid w-100 rounded hobby">
                         <div class="text-description">
                             <h3 class="img-txt text-center">Films et séries</h3>
                         </div>
                     </div>
-                    <div class="col hobby-container px-1">
-                        <img src="./images/bricolage.jpg" alt="photo bricolage" class="img-fluid rounded hobby">
+                    <div class="col hobby-container p-1">
+                        <img src="./images/bricolage.jpg" alt="photo bricolage" class="img-fluid w-100 rounded hobby">
                         <div class="text-description">
                             <h3 class="img-txt text-center">Bricolage - Rénovation </h3>
                         </div>
                     </div>
-                    <div class="col hobby-container px-1">
-                        <img src="./images/beer.jpg" alt="photo bières du monde" class="img-fluid rounded hobby">
+                    <div class="col hobby-container p-1">
+                        <img src="./images/beer.jpg" alt="photo bières du monde" class="img-fluid w-100 rounded hobby">
                         <div class="text-description">
                             <h3 class="img-txt text-center">Bières du monde</h3>
                         </div>
@@ -549,9 +563,39 @@
         </section>
 
         <!-- Section Contact -->
-        <section class=" mb-4" id="contact">
+        <section class="container-fuid mb-4 px-3" id="contact">
             <div class="row my-4">
-                <h2 class="text-center my-4">Contact</h2>
+                <h2 class="text-center my-1">Contact</h2>
+            </div>
+            <div class="d-flex flex-column flex-md-row align-items-center justify-content-center main-social mb-3">
+                <div class="container-fluid d-flex flex-column align-items-center justify-content-center order-1 order-md-1 mb-3">
+                    <i class="bi bi-mailbox2 fs-3"></i>
+                    <a href="mailto:pierre.ctn@gmail.com" class="text-decoration-none text-white">pierre.ctn@gmail.com</a>
+                </div>
+                <div class="d-flex flex-column flex-md-row align-items-center justify-content-center order-3 order-md-2 main-social">
+                    <a href="#" class="d-inline-flex justify-content-center align-items-center flex-wrap text-decoration-none text-white overflow-hidden button">
+                            <div class="s-icon d-inline-flex justify-content-center align-items-center">
+                                <i class="bi bi-linkedin"></i>
+                            </div>
+                            <span>LinkedIn</span>
+                    </a>
+                    <a href="#" class="d-inline-flex justify-content-center align-items-center flex-wrap text-decoration-none text-white overflow-hidden button">
+                        <div class="s-icon d-inline-flex justify-content-center align-items-center">
+                            <i class="bi bi-github"></i>
+                        </div>
+                        <span>GitHub</span>
+                    </a>
+                    <a href="#" class="d-inline-flex justify-content-center align-items-center flex-wrap text-decoration-none text-white overflow-hidden button">
+                        <div class="s-icon d-inline-flex justify-content-center align-items-center">
+                            <i class="bi bi-twitter-x"></i>
+                        </div>
+                        <span>X (ex Twitter)</span>
+                    </a>
+                </div>
+                <div class="container-fluid d-flex flex-column align-items-center justify-content-center order-2 order-md-3 mb-3">
+                    <i class="bi bi-phone-vibrate"></i>
+                    <a href="tel:+33606060606" class="text-decoration-none text-white">+33 (0)6 06 06 06 06</a>
+                </div>
             </div>
         </section>
     </main>
