--- a/Formation dev fullstack Skill&You/01 Front/03 Maquettage - Bootstrap/Evaluation/CV eng-fr/index.html
+++ b/Formation dev fullstack Skill&You/01 Front/03 Maquettage - Bootstrap/Evaluation/CV eng-fr/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a href="#loisirs" class="nav-link active">Loisirs</a></li>
                         <li class="nav-item"><a href="#contact" class="nav-link active">Contact</a></li>
                         <li class="nav-item"><a href="./index.html" class="nav-link active"><img src="./images/france.png" alt="drapeau français" width="20"></a></li>
-                        <li class="nav-item"><a href="" class="nav-link active"><img src="./images/anglais.png" alt="drapeau anglais" width="20"></a></li>
+                        <li class="nav-item"><a href="./html/cv-eng.html" class="nav-link active"><img src="./images/anglais.png" alt="drapeau anglais" width="20"></a></li>
                     </ul>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                 <!-- Partie Notions -->
                 <div class="col-md-12 col-xl-4 text-white card border-primary bg-dark mb-3 mx-sm-2">
                     <span class="d-flex justify-content-center fs-4">Notions</span>
-                    <div class="d-flex flex-column flex-md-row align-items-center justify-content-md-evenly h-100 my-3">
+                    <div class="d-flex flex-column flex-sm-row align-items-center justify-content-md-evenly h-100 my-3">
                         <ul>
                             <li>PHP</li>
                             <li>asp .net</li>
